src/styles.scss
@import '~pretty-checkbox/src/pretty-checkbox.scss';
/* You can add global styles to this file, and also import other style files */
$border-radius: .15em;
$material-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2),
0 2px 2px 0 rgba(0, 0, 0, .14),
0 1px 5px 0 rgba(0, 0, 0, .12);
$material-shadow-light: 0 3px 1px -2px rgba(0, 0, 0, .1),
0 2px 2px 0 rgba(0, 0, 0, .07),
0 1px 5px 0 rgba(0, 0, 0, .06);
$material-shadow-inset: inset 0 3px 1px -2px rgba(0, 0, 0, .1),
inset 0 2px 2px 0 rgba(0, 0, 0, .07),
inset 0 1px 5px 0 rgba(0, 0, 0, .06);
$material-dialog-shadow: 0 4px 8px rgba(0, 0, 0, .32),
0 8px 40px rgba(0, 0, 0, .4);
html, body {
  margin: 0;
  padding: 0;

  height: 100%;
}

.center-text-vertical {
  vertical-align: middle;
  display: inline-flex;
}

.card {
  margin: .5em;
  box-shadow: $material-shadow;
  border: none;
  -webkit-border-radius: $border-radius;
  -moz-border-radius: $border-radius;
  border-radius: $border-radius;
}

.card-elevate-anim {
  transition: background-color .5s;
}

.card-elevate-anim:hover {
  background-color: rgba(128, 128, 128, .4);
}

.card-title {
  padding: .5em;
}

.card-footer {
  background-color: transparent;
}

.btn {
  vertical-align: middle;
  display: inline-flex;
  border-radius: $border-radius;
  box-shadow: $material-shadow;
}

.form-control {
  border-radius: $border-radius;
  box-shadow: $material-shadow-light;
  border: none;
  background-color: rgba(255, 255, 255, .7);
}

*:not(.material-icons,.fa,.fas,
.far,.fal,.fab ) {
  font-family: Roboto, sans-serif
}

::-webkit-scrollbar {
  -webkit-appearance: none;
  width: .4em;
  height: .4em;
  background: transparent;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  border-radius: .2em;
  background-color: rgba(128, 128, 128, .3);
}

body {
  overflow-x: hidden;
}

.dialog-container {
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  background-color: rgba(0, 0, 0, .3);
  z-index: 10;
}

.dialog-window {
  z-index: 100;
  position: fixed;
  width: 30em;
  max-width: 100%;
  left: 0;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  margin: auto;
  max-height: 60%;
  overflow-y: auto;
  box-shadow: $material-dialog-shadow;
}

.rounded {
  border-radius: $border-radius;
}

.rounded-left {
  border-bottom-left-radius: $border-radius;
  border-top-left-radius: $border-radius;
}

.rounded-right {
  border-bottom-right-radius: $border-radius;
  border-top-right-radius: $border-radius;
}

.rounded-bottom {
  border-bottom-left-radius: $border-radius;
  border-bottom-right-radius: $border-radius;
}

.rounded-top {
  border-top-left-radius: $border-radius;
  border-top-right-radius: $border-radius;
}

.navbar {
  box-shadow: $material-shadow;
}

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url('assets/MaterialIcons-Regular.eot'); /* For IE6-8 */
  src: local('Material Icons'),
  local('MaterialIcons-Regular'),
  url('assets/MaterialIcons-Regular.woff2') format('woff2'),
  url('assets/MaterialIcons-Regular.woff') format('woff'),
  url('assets/MaterialIcons-Regular.ttf') format('truetype');
}

/* roboto-regular - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'),
  url('assets/roboto-v18-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
  url('assets/roboto-v18-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px; /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}

.modal-content, .modal-footer, .modal-header {
  border: none;
}

.image-fit {
  max-width: 100%;
  max-height: 100%;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: auto;
  display: block;
}

.fa, .fas, .far, .fal, .fab {
  font-size: 1.15em;
  padding: 0.23em;
}

.cover-img {
  min-width: 100%;
  object-fit: cover;
}

